setup basic portfolio

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -3,7 +3,37 @@
   margin: 0 auto;
   max-width: 960px;
   @media only screen and (min-width: $cut) {
-    width: 80%;
+    width: 50%;
+  }
+}
+
+.expertise {
+  display: flex;
+  flex-flow: row wrap;
+  // justify-content: space-between;
+  padding: 0;
+  li {
+    position: relative;
+    display: flex;
+    // justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    border: 1px solid #32416b;
+    border-radius: 50px;
+    padding: 5px 20px 5px 10px;
+    margin: 6px;
+    // min-width: 8%;
+
+    &::before {
+      content: '';
+      // position: absolute;
+      margin-right: 5px;
+      background-color: #32416b;
+      width: 8px;
+      height: 8px;
+      border-radius: 50px;
+    }
   }
 }
 
@@ -28,6 +58,13 @@
 }
 
 .user-details {
-  text-align: center;
+  // text-align: center;
   margin: 5px auto;
+
+  .text {
+    font-size: 20px;
+    text-align: justify;
+    font-weight: bold;
+    line-height: 180%;
+  }
 }
