--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,19 @@
  <div class="user-details">
+  <h1> About Me </h1>
+  <p class="text"> {{site.user_description}} </p>
+</div>
   <h1> My Expertise </h1>
-  <p> {{site.user_description}} </p>
-</div>
-  <div class="user">
-    <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-</div>
+  <ul class="expertise">
+    <li>JavaScript</li>
+    <li>React</li>
+    <li>Redux</li>
+    <li>RXJS</li>
+    <li title="a little bit">Golang</li>
+    <li>Git</li>
+    <li>Docker</li>
+    <li>React Native</li>
+    <li>Node & Express</li>
+    <li>Rest API</li>
+    <li>GraphQL</li>
+    <li>Apollo</li>
+  </ul>
