--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -8,9 +8,18 @@
   @media only screen and (min-width: $cut) {
     width: 80%;
   }
+
+  .user-details {
+    width: 100%;
+  }
+
+  .user-projects-container {
+    display: flex;
+  }
 }
 
 .user-projects {
+  flex: 1;
   margin: 20px auto;
   img {
     max-width: 100%;
@@ -32,7 +41,7 @@
 .contents {
   @media only screen and (min-width: $cut) {
     margin-left: 0;
-    width: 48%;
+    // width: 48%;
   }
 }
 
@@ -40,7 +49,7 @@
   @media only screen and (min-width: $cut) {
     float: right;
     margin-top: -5%;
-    width: 48%;
+    // width: 48%;
   }
 }
 .images-right {
