--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,31 +1,79 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h1>Featured Projects</h1>
 </div>
 <div class="user-projects-container">
-  <div class="user-projects">
+  <div class="user-projects-imgless">
     <!-- <div class="images-right">
       <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
     </div> -->
     <div class="contents">
-      <h3> Project Title </h3>
+      <h3>QSkip</h3>
       <ul>
-        <li> Featured Skills</li>
+        <li>React/React Native</li>
       </ul>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <a class="project-link" href="#">Check it out</a>
+      <p>
+        An app that lets people order their food without having to wait in queue
+        in cafes.
+      </p>
+      <a class="project-link" href="https://www.qskipapp.com/">Check it out</a>
     </div>
   </div>
-  <div class="user-projects">
+  <div class="user-projects-imgless">
     <!-- <div class="images-left">
       <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
     </div> -->
     <div class="contents-right">
-      <h3> Project Title </h3>
+      <h3>Post It Play It</h3>
       <ul>
-        <li> Featured Skills</li>
+        <li>React Native</li>
       </ul>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <a class="project-link" href="#">Check it out</a>
+      <p>
+        Professional, college, video game or personal fitness challenges; you
+        pick your own game, you set your own spread, choose your challenge and
+        set your dollar amount.
+      </p>
+      <a class="project-link" href="https://www.postitplayit.com/"
+        >Check it out</a
+      >
+    </div>
+  </div>
+
+  <div class="user-projects-imgless">
+    <!-- <div class="images-right">
+      <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    </div> -->
+    <div class="contents">
+      <h3>Khawo</h3>
+      <ul>
+        <li>React/React Native</li>
+      </ul>
+      <p>
+        It’s an ordering app that lets customers at a restaurant place their
+        order without having to wait for a waiter.
+      </p>
+      <a
+        class="project-link"
+        href="https://play.google.com/store/apps/details?id=com.khawo&hl=en"
+        >Check it out</a
+      >
+    </div>
+  </div>
+  <div class="user-projects-imgless">
+    <!-- <div class="images-left">
+      <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    </div> -->
+    <div class="contents-right">
+      <h3>GoSpark</h3>
+      <ul>
+        <li>React Native/NodeJS</li>
+      </ul>
+      <p>
+        Web and mobile that shows the best deals in different catagories in your
+        city.
+      </p>
+      <a class="project-link" href="https://www.gospark.pk/home"
+        >Check it out</a
+      >
     </div>
   </div>
 </div>
