--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,19 +1,20 @@
- <div class="user-details">
-  <h1> About Me </h1>
-  <p class="text"> {{site.user_description}} </p>
+<div class="user-details">
+  <h1>About Me</h1>
+  <p class="text">{{ site.user_description }}</p>
 </div>
-  <h1> My Expertise </h1>
-  <ul class="expertise">
-    <li>JavaScript</li>
-    <li>React</li>
-    <li>Redux</li>
-    <li>RXJS</li>
-    <li title="a little bit">Golang</li>
-    <li>Git</li>
-    <li>Docker</li>
-    <li>React Native</li>
-    <li>Node & Express</li>
-    <li>Rest API</li>
-    <li>GraphQL</li>
-    <li>Apollo</li>
-  </ul>
+<h1>My Expertise</h1>
+<ul class="expertise">
+  <li>JavaScript</li>
+  <li>React</li>
+  <li>Redux</li>
+  <li>RXJS</li>
+  <li title="a little bit">Golang</li>
+  <li>Git</li>
+  <li>Docker</li>
+  <li>Webpack</li>
+  <li>React Native</li>
+  <li>Node & Express</li>
+  <li>Rest API</li>
+  <li>GraphQL</li>
+  <li>Apollo</li>
+</ul>
