--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,5 @@
 <div class="user-details">
-  <h1>Featured Projects</h1>
+  <h1>Projects</h1>
 </div>
 <div class="user-projects-container">
   <div class="user-projects-imgless">
