--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
         <li>Golang/Microservice Architecture</li>
       </ul>
       <p>
-        Clanbeat is a HR software that tracks your team’s highs and lows. It
+        Clanbeat is an HR software that tracks your team’s highs and lows. It
         helps you to automate onboarding processes, all newcomers are guided
         through journey designed for them. Clanbeat makes taking on 1-on-1s as
         easy and effortless as possible.
